// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots StyledButton with text 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border: solid blue 1px;
  border-radius: 4px;
  background: tomato;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.emotion-0:hover {
  cursor: pointer;
  background: lime;
}

<div
  className="emotion-0"
  onClick={[Function]}
>
  Button Label
</div>
`;

exports[`Storyshots StyledButton without text 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  border: solid blue 1px;
  border-radius: 4px;
  background: tomato;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.emotion-0:hover {
  cursor: pointer;
  background: lime;
}

<div
  className="emotion-0"
  onClick={[Function]}
>
  
</div>
`;
